<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="392dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="16dp"
        android:text="@string/descricao"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="255dp"
        android:layout_height="59dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="57dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPeso"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:hint="@string/infoPeso"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="167dp"
        android:layout_height="149dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="71dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <RadioButton
            android:id="@+id/radioButtonMarte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbMarte" />

        <RadioButton
            android:id="@+id/rabioButtoJupiter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbJupiter" />

        <RadioButton
            android:id="@+id/radioButtonMercurio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbMercurio" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="123dp"
        android:hint="@string/hintResultado"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="43dp"
        android:text="@string/btCalcular"
        app:layout_constraintBottom_toTopOf="@+id/textViewResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>